(19/12) Resoluçao da PROVA SUBSTITUTIVA

--- a/PROVA 2/prova2-turma2.html
+++ b/PROVA 2/prova2-turma2.html
@@ -236,7 +236,7 @@
             elemRelatorio.appendChild(traco);
          }
       }
-      elemVisualizar.addEventListener('click', visualizar);
+      elemVisualizar.addEventListener('click', visualizar)
 
    </script>
 
